# async-jsonl

./: .gitignore  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-drafter.yml  release-plz.yml
crates/async_jsonl/: CHANGELOG.md  Cargo.toml  README.md
crates/async_jsonl/examples/: simple.rs
crates/async_jsonl/src/: async_jsonl.rs  jsonl_reader.rs  lib.rs  take_n.rs  value.rs
crates/async_jsonl/tests/: reverse_tests.rs
crates/async_jsonl_ci/: CHANGELOG.md  Cargo.toml
crates/async_jsonl_ci/src/: lib.rs  workflow.rs
crates/async_jsonl_ci/src/jobs/: mod.rs  release_drafter.rs  release_plz.rs
crates/async_jsonl_ci/tests/: ci.rs
crates/async_jsonl_examples/: Cargo.toml
crates/async_jsonl_examples/examples/: count.rs  count_lines.rs  reverse_reading.rs
crates/async_jsonl_examples/src/: main.rs
crates/async_jsonl_tests/: Cargo.toml
crates/async_jsonl_tests/tests/: integration_tests.rs  reverse_tests.rs
crates/async_rev_buf/: CHANGELOG.md  Cargo.toml  README.md
crates/async_rev_buf/benches/: comparison.rs
crates/async_rev_buf/examples/: streaming_demo.rs
crates/async_rev_buf/src/: buf_reader.rs  lib.rs  lines.rs
crates/async_rev_buf/tests/: advanced_integration.rs  basic_integration.rs  edge_tests.rs
src/: lib.rs
