[package]
name = "async-jsonl"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", default-features = false, features = ["fs", "io-util"] }
futures = "0.3.31"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
