[package]
name = "async-jsonl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "An efficient async Rust library for reading and processing JSON Lines (JSONL) files using Tokio streams."
authors = ["Sandipsinh Rathod <sandipsinh@gpmcp.com>"]

[dependencies]
tokio = { version = "1.45.1", default-features = false, features = ["fs", "io-util"] }
futures = "0.3.31"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
