[package]
name = "async_jsonl_examples"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", default-features = false, features = ["fs", "io-util", "macros", "rt"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }


async-jsonl = { path = "../async_jsonl" }
