[package]
name = "async_jsonl_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", default-features = false, features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.8.1"
serde_json = "1.0.140"
anyhow = "1.0.98"


async-jsonl = { path = "../async_jsonl" }
