[package]
name = "async_jsonl_tests"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tokio = { version = "1.45.1", default-features = false, features = ["fs", "io-util", "macros", "rt"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"


async-jsonl = { path = "../async_jsonl" }
