[package]
name = "async-rev-buf"
version = "0.1.0"
edition = "2021"

[dependencies]
pin-project-lite = "0.2.16"
tokio = { version = "1.45.1", features = ["io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.45.1", features = ["fs"] }
criterion = { version = "0.6.0", features = ["html_reports", "async_tokio"] }
rev_buf_reader = "0.3"

[[bench]]
name = "comparison"
harness = false

