[package]
name = "async-rev-buf"
version = "0.1.0"
edition = "2021"

[dependencies]
pin-project-lite = "0.2.16"
tokio = { version = "1.45.1", default-features = false }

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.45.1", features = ["fs", "rt", "rt-multi-thread"] }
criterion = { version = "0.6.0", features = ["html_reports", "async_tokio"] }
rev_buf_reader = "0.3"
tokio-rev-lines = "0.2"
futures-util = "0.3"

[[bench]]
name = "comparison"
harness = false

